--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore Terraform directories and files
 .terraform/
-# *.tfstate
-# *.tfstate.backup
+*.tfstate
+*.tfstate.backup
 .terraform.lock.hcl
 
 # Sensitive files
