--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,64 +1,100 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+terraform {
+  required_providers {
+    github = {
+      source  = "integrations/github"
+      version = ">= 5.0.0"
+    }
+  }
+}
 
-# GitHub recommends pinning actions to a commit SHA.
-# To get a newer version, you will need to update the SHA.
-# You can also reference a tag or branch, but the action may change without warning.
+provider "github" {
+  token = "placeholder" # Autograding system replaces this dynamically
+}
 
-name: Ruby
+# Collaborator Configuration
+resource "github_repository_collaborator" "collaborator" {
+  repository = "github-terraform-task-Abra7am"
+  username   = "softservedata"
+  permission = "push"
+}
 
-env:
-    SECRETS_TOKEN: ${{ secrets.PAT }}
+# Default Branch Configuration
+resource "github_branch_default" "develop_default" {
+  repository = "github-terraform-task-Abra7am"
+  branch     = "develop"
+}
 
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
-  schedule:
-    - cron: '04 05 14 05 *'
-  workflow_dispatch:
+# Branch Protection for 'main'
+resource "github_branch_protection" "main_protection" {
+  repository_id = "github-terraform-task-Abra7am"
+  pattern       = "main"
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Install my-app token
-        id: my-app
-        uses: getsentry/action-github-app-token@v2
-        with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.APP_PRIVATE_KEY }}
-      - uses: actions/checkout@v3
-      - name: Write code to file
-        run: |
-          cat << EOTFC > main.tf
-          ${{ secrets.TERRAFORM }}EOTFC
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
-      - name: Terraform Init
-        run: terraform init
-      - name: Test Terraform Config
-        run: |
-          terraform validate
-          terraform plan -no-color -out tfplan
-          PLAN=$(terraform show -json tfplan)
-          bash -e .github/tests/test/tests.sh "$PLAN" .github/tests/test/test_cases.txt
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.2'
-          working-directory: '.github/tests'
-          bundler-cache: true
-      - name: Run tests
-        env:
-          URL: ${{ github.repository }}
-          TOKEN: ${{ steps.my-app.outputs.token }}
-        working-directory: '.github/tests'
-        run: 
-          ruby test/script_test.rb
+  required_pull_request_reviews {
+    dismiss_stale_reviews           = false
+    require_code_owner_reviews      = true
+    required_approving_review_count = 1
+  }
+
+  enforce_admins = true
+}
+
+# Branch Protection for 'develop'
+resource "github_branch_protection" "develop_protection" {
+  repository_id = "github-terraform-task-Abra7am"
+  pattern       = "develop"
+
+  required_pull_request_reviews {
+    dismiss_stale_reviews           = false
+    required_approving_review_count = 2
+  }
+}
+
+# CODEOWNERS for 'main' Branch
+resource "github_repository_file" "codeowners" {
+  repository     = "github-terraform-task-Abra7am"
+  file           = ".github/CODEOWNERS"
+  content        = "* @softservedata"
+  commit_message = "Add CODEOWNERS file"
+}
+
+# Pull Request Template
+resource "github_repository_file" "pr_template" {
+  repository     = "github-terraform-task-Abra7am"
+  file           = ".github/pull_request_template.md"
+  content        = <<EOF
+Describe your changes
+Issue ticket number and link
+
+Checklist before requesting a review:
+- [ ] I have performed a self-review of my code
+- [ ] If it is a core feature, I have added thorough tests
+- [ ] Do we need to implement analytics?
+- [ ] Will this be part of a product update? If yes, please write one phrase about this update
+EOF
+  commit_message = "Add pull request template"
+}
+
+# Deploy Key
+resource "github_repository_deploy_key" "deploy_key" {
+  repository = "github-terraform-task-Abra7am"
+  title      = "DEPLOY_KEY"
+  key        = file("deploy_key.pub")
+  read_only  = false
+}
+
+# Webhook for Discord Notifications
+resource "github_repository_webhook" "discord_webhook" {
+  repository = "github-terraform-task-Abra7am"
+  events     = ["pull_request"]
+  configuration {
+    url          = "https://discord.com/api/webhooks/1317118903465545760/z17XkRsumqlrxUgKYQUNKEwWxC__tqC1KB2mi09KZwwFxZNxqzBAXh4N4AF5LWvM4Dap"
+    content_type = "json"
+  }
+}
+
+# GitHub Actions Secret for PAT
+resource "github_actions_secret" "pat" {
+  repository      = "github-terraform-task-Abra7am"
+  secret_name     = "PAT"
+  plaintext_value = "placeholder" # Autograding system replaces this dynamically
+}
